# langchain-learning

./: .gitignore  README.md  langchain_intro.ipynb  pyproject.toml
langchain_notes/: langchain_intro.ipynb
langchain_practical/: pyproject.toml
langchain_practical/notebooks/: 01_llm_calling.ipynb  README.md
langchain_practical/notebooks/01_llm_call/: README.md  llm_call.ipynb
langchain_practical/notebooks/02_chat_messages/: README.md  chat_messages.ipynb
langchain_practical/notebooks/03_prompt_messages/: prompt_messages.ipynb
langchain_practical/notebooks/03_prompts_structured_outputs/: 02_structured_output.ipynb  README.md
langchain_practical/notebooks/04_tool_calls/: tool_calls.ipynb
notebooks/00_langchain_introduction/: langchain_intro.ipynb
notebooks/01_llm_call/: README.md  llm_call.ipynb
notebooks/02_chat_messages/: README.md  chat_messages.ipynb
notebooks/03_prompts_structured_outputs/: 01_prompt_templates.ipynb  02_structured_output.ipynb  README.md
