[project]
name = "langchain-practical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
]
